--- a/package.json
+++ b/package.json
@@ -18,20 +18,14 @@
   "author": "Per Guth <mail@perguth.de> (http://perguth.de/)",
   "license": "AGPLv3",
   "dependencies": {
-    "babelify": "~6.3.0",
-    "browserify": "~11.2.0",
-    "cuid": "~1.3.8",
-    "debug": "~2.2.0",
-    "extend.js": "~0.0.2",
-    "feature": "~1.0.0",
-    "inherits": "~2.0.1",
-    "namedfilestream": "~1.0.2",
-    "signalhub": "~4.3.1",
-    "through": "~2.3.8",
-    "typedarray-to-buffer": "~3.0.4",
-    "webrtc-swarm": "~2.0.0",
-    "wzrd": "~1.3.1",
-    "crypto": "0.0.3"
+    "crypto": "0.0.3",
+    "cuid": "^1.3.8",
+    "events": "^1.1.0",
+    "feature": "^1.0.0",
+    "inherits": "^2.0.1",
+    "namedfilestream": "^1.1.0",
+    "signalhub": "^4.3.1",
+    "webrtc-swarm": "^2.2.0"
   },
   "repository": {
     "type": "git",
