--- a/package.json
+++ b/package.json
@@ -33,5 +33,10 @@
   },
   "bugs": {
     "url": "https://github.com/pguth/peermesh/issues"
+  },
+  "devDependencies": {
+    "babelify": "^7.3.0",
+    "browserify": "^13.1.1",
+    "wzrd": "^1.4.0"
   }
 }
